# anvil

./: .gitignore  DeviceInteractions.pm  Makefile.am  README.md  SerialInteractions.pm  anvil.conf  anvil.spec.in  configure-devices  configure.ac  install.sh  notes  scan-test  scan-test.pl  scancore.README  scancore.sql  serial-devices  snmp-models.json  snmp-scan  striker.conf  test.pl  update.sh  watch_logs
Anvil/: Makefile.am  Tools.pm  Tools.t  anvil-tools.xml  test.conf  tools.conf
Anvil/Tools/: Account.pm  Actions.pm  Alert.pm  Cluster.pm  Convert.pm  DRBD.pm  Database.pm  DeviceInteractions.pm  Email.pm  Get.pm  Job.pm  Log.pm  Network.pm  NetworkScan.pm  Remote.pm  ScanCore.pm  Server.pm  Storage.pm  Striker.pm  System.pm  Template.pm  Validate.pm  Vendors.pm  Words.pm
cgi-bin/: Makefile.am  get_anvil_status  get_anvils  get_cpu  get_filesystems  get_memory  get_networks  get_replicated_storage  get_server_screenshot  get_servers  get_shared_storage  get_status  home  manage_vnc_pipes  manage_vnc_ports  set_membership  set_power  striker  upload.pl  words.xml
html/: Makefile.am  index.html
html/jquery-ui-1.12.1/: jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.min.css  package.json
man/: Makefile.am  alteeve-repo-setup.8  anvil-access-module.8  anvil-boot-server.8  anvil-change-password.8  anvil-check-memory.8  anvil-configure-host.8  anvil-cycle-vm-nics.8  anvil-daemon.8  anvil-delete-server.8  anvil-download-file.8  anvil-file-details.8  anvil-get-server-screenshot.8  anvil-join-anvil.8  anvil-maintenance-mode.8  anvil-manage-alerts.8  anvil-manage-daemons.8  anvil-manage-dr.8  anvil-manage-files.8  anvil-manage-firewall.8  anvil-manage-host.8  anvil-manage-keys.1  anvil-manage-power.8  anvil-manage-server-network.8  anvil-manage-server-storage.8  anvil-manage-server-system.8  anvil-manage-server.8  anvil-manage-storage-groups.8  anvil-manage-vnc-pipe.8  anvil-migrate-server.8  anvil-monitor-drbd.8  anvil-monitor-lvm.8  anvil-monitor-network.8  anvil-monitor-performance.8  anvil-monitor-server.8  anvil-network-profiler.8  anvil-parse-fence-agents.8  anvil-pcs-wrapper.8  anvil-provision-server.8  anvil-pull-pid-logs.8  (+51 more)
pxe/: Makefile.am
pxe/kickstart/: dr.ks  node.ks  striker.ks
scancore-agents/: Makefile.am
scancore-agents/scan-apc-pdu/: Striker-MIB.txt  scan-apc-pdu  scan-apc-pdu.sql  scan-apc-pdu.xml
scancore-agents/scan-apc-ups/: scan-apc-ups  scan-apc-ups.sql  scan-apc-ups.xml
scancore-agents/scan-cluster/: scan-cluster  scan-cluster.sql  scan-cluster.xml
scancore-agents/scan-drbd/: scan-drbd  scan-drbd.sql  scan-drbd.xml
scancore-agents/scan-filesystems/: scan-filesystems  scan-filesystems.sql  scan-filesystems.xml
scancore-agents/scan-hardware/: scan-hardware  scan-hardware.sql  scan-hardware.xml
scancore-agents/scan-hpacucli/: scan-hpacucli  scan-hpacucli.sql  scan-hpacucli.xml
scancore-agents/scan-ipmitool/: scan-ipmitool  scan-ipmitool.sql  scan-ipmitool.xml
scancore-agents/scan-lvm/: scan-lvm  scan-lvm.sql  scan-lvm.xml
scancore-agents/scan-network/: scan-network  scan-network.sql  scan-network.xml
scancore-agents/scan-server/: scan-server  scan-server.sql  scan-server.xml
scancore-agents/scan-storage/: scan-storage  scan-storage.sql
scancore-agents/scan-storcli/: scan-storcli  scan-storcli.sql  scan-storcli.xml
selinux/: Makefile.am  anvil-node.te  anvil-subnode.te  anvil-subnode.te.in
striker-ui/: .env  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  Makefile.am  README.md  env.development  eslint.config.mjs  lint-staged.config.mjs  lsxdist  next.config.js  next.config.mjs  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
striker-ui-api/: .eslintignore  .eslintrc.json  .gitignore  Makefile.am  README.md  app.js  eslint.config.mjs  index.js  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  webpack.config.js
striker-ui-api/lib/: accessDB.js
striker-ui-api/routes/: files.js
striker-ui-api/src/: .eslintrc.json  app.ts  index.ts  passport.ts  session.ts
striker-ui/.husky/: commit-msg  pre-commit
striker-ui/components/: ActionGroup.tsx  AddFenceDeviceForm.tsx  AddFenceInputGroup.tsx  AllocationBar.tsx  Anvil.tsx  AnvilContext.tsx  AnvilDrawer.tsx  AnvilList.tsx  AnvilNode.tsx  Anvils.tsx  Autocomplete.tsx  BriefNetworkInterface.tsx  ButtonWithMenu.tsx  CPU.tsx  Checkbox.tsx  CheckboxWithLabel.tsx  CircularProgress.tsx  CommonFenceInputGroup.tsx  ConfirmDialog.tsx  ContainedButton.tsx  CrudList.tsx  Decorator.tsx  Display.tsx  Divider.tsx  Domain.tsx  DropArea.tsx  EditFenceDeviceInputGroup.tsx  EditFenceInputGroup.tsx  FlexBox.tsx  FormDialog.tsx  FormSummary.tsx  GateForm.tsx  GatePanel.tsx  GeneralInitForm.tsx  Grid.tsx  Header.tsx  InnerPanel.tsx  (+56 more)
tools/: Makefile.am  an-prep-database  anvil-access-module  anvil-boot-server  anvil-change-password  anvil-check-memory  anvil-clear-reboot  anvil-configure-host  anvil-configure-network  anvil-configure-striker  anvil-cycle-vm-nics  anvil-daemon  anvil-delete-server  anvil-download-file  anvil-file-details  anvil-get-server-screenshot  anvil-jobs  anvil-join-anvil  anvil-kmods  anvil-maintenance-mode  anvil-manage-alerts  anvil-manage-daemons  anvil-manage-dr  anvil-manage-files  anvil-manage-firewall  anvil-manage-host  anvil-manage-install-target  anvil-manage-keys  anvil-manage-power  anvil-manage-server  anvil-manage-server-network  anvil-manage-server-storage  anvil-manage-server-system  anvil-manage-storage  anvil-manage-storage-groups  anvil-manage-striker-peers  anvil-manage-tunnel  anvil-manage-vnc-pipe  anvil-migrate-server  anvil-monitor-drbd  (+79 more)
units/: 50-anvil.preset  Makefile.am  ScanCore.service  anvil-boot-time.service  anvil-daemon.service  anvil-jobs.service  anvil-monitor-daemons.service  anvil-monitor-drbd.service  anvil-monitor-lvm.service  anvil-monitor-network.service  anvil-monitor-performance.service  anvil-monitor-server.service  anvil-safe-start.service  scancore-daemon.service  scancore.service  striker-ui-api.service
(+1096 files in other folders)
