MAINTAINERCLEANFILES	= Makefile.in

anvildir		= ${datarootdir}/perl5/Anvil

dist_anvil_DATA		= \
			  anvil-tools.xml \
			  test.conf \
			  tools.conf \
			  Tools.pm

dist_anvil_SCRIPTS	= \
			  Tools.t

anviltoolsdir		= ${anvildir}/Tools

dist_anviltools_DATA	= \
			  Tools/Email.pm \
			  Tools/Remote.pm \
			  Tools/Log.pm \
			  Tools/DRBD.pm \
			  Tools/ScanCore.pm \
			  Tools/Validate.pm \
			  Tools/Words.pm \
			  Tools/Server.pm \
			  Tools/Account.pm \
			  Tools/Get.pm \
			  Tools/Storage.pm \
			  Tools/Alert.pm \
			  Tools/Database.pm \
			  Tools/Striker.pm \
			  Tools/Cluster.pm \
			  Tools/Convert.pm \
			  Tools/System.pm \
			  Tools/Job.pm \
			  Tools/Template.pm \
			  Tools/Network.pm
