MAINTAINERCLEANFILES	= Makefile.in

cgibindir		= $(localstatedir)/www/cgi-bin
dist_cgibin_SCRIPTS	= \
                          cold_stop \
			  get_anvil_status \
			  get_anvils \
                          get_cpu \
                          get_memory \
                          get_replicated_storage
                          get_shared_storage \
                          get_status \
                          set_membership \
                          set_power \
			  striker \
			  upload.pl 

