MAINTAINERCLEANFILES    = Makefile.in

cgibindir               = $(localstatedir)/www/cgi-bin
dist_cgibin_SCRIPTS     = \
                          get_anvils \
                          get_cpu \
                          get_memory \
                          get_networks \
                          get_replicated_storage \
                          get_servers \
                          get_shared_storage \
                          get_status \
                          manage_vnc_pipes \
                          set_membership \
                          set_power \
                          striker \
                          upload.pl 

