MAINTAINERCLEANFILES	= Makefile.in

htmldir			= ${localstatedir}/www/html

jqueryver		= 3.3.1
jqueryuiver		= 1.12.1

dist_html_DATA		= \
			  favicon.ico \
			  index.html \
			  jquery-$(jqueryver).js

# empty dir for now
skinsdir		= $(htmldir)/skins

skinsalteevedir		= $(skinsdir)/alteeve

dist_skinsalteeve_DATA	= \
			  skins/alteeve/anvil.html \
			  skins/alteeve/anvil.js \
			  skins/alteeve/config.html \
			  skins/alteeve/config.js \
			  skins/alteeve/email.html \
			  skins/alteeve/email.js \
			  skins/alteeve/files.css \
			  skins/alteeve/files.html \
			  skins/alteeve/files.js \
			  skins/alteeve/jobs.js \
			  skins/alteeve/main.css \
			  skins/alteeve/main.html \
			  skins/alteeve/main.js \
			  skins/alteeve/pxe.txt \
			  skins/alteeve/shared.html \
			  skins/alteeve/striker.html

skinsalteeveimagesdir	= $(skinsalteevedir)/images

dist_skinsalteeveimages_DATA= \
			  skins/alteeve/images/anvil_icon_off.png \
			  skins/alteeve/images/anvil_icon_on.png \
			  skins/alteeve/images/anvil_icon_original.png \
			  skins/alteeve/images/anvil_icon.png \
			  skins/alteeve/images/anvil_icon.xcf \
			  skins/alteeve/images/back_off.png \
			  skins/alteeve/images/back_on.png \
			  skins/alteeve/images/back_original.png \
			  skins/alteeve/images/back.png \
			  skins/alteeve/images/back.xcf \
			  skins/alteeve/images/bios-splash.jpg \
			  skins/alteeve/images/broken_key_icon_off.png \
			  skins/alteeve/images/broken_key_icon_on.png \
			  skins/alteeve/images/build-anvil_icon.png \
			  skins/alteeve/images/configure_icon_off.png \
			  skins/alteeve/images/configure_icon_on.png \
			  skins/alteeve/images/configure_icon_original.png \
			  skins/alteeve/images/configure_icon.xcf \
			  skins/alteeve/images/configure-network.png \
			  skins/alteeve/images/delete.png \
			  skins/alteeve/images/email_off.png \
			  skins/alteeve/images/email_on.png \
			  skins/alteeve/images/email_recipient.png \
			  skins/alteeve/images/email_server.png \
			  skins/alteeve/images/fence.png \
			  skins/alteeve/images/files_off.png \
			  skins/alteeve/images/files_on.png \
			  skins/alteeve/images/help_icon_off.png \
			  skins/alteeve/images/help_icon_on.png \
			  skins/alteeve/images/help_icon_original.png \
			  skins/alteeve/images/help_icon.png \
			  skins/alteeve/images/help_icon.xcf \
			  skins/alteeve/images/install_target_disabled.png \
			  skins/alteeve/images/install_target_enabled.png \
			  skins/alteeve/images/install_target_original.png \
			  skins/alteeve/images/install_target_original.xcf \
			  skins/alteeve/images/logo.png \
			  skins/alteeve/images/logo.xcf \
			  skins/alteeve/images/manage_file_32.png \
			  skins/alteeve/images/manage_file.png \
			  skins/alteeve/images/manifest.png \
			  skins/alteeve/images/network-wired-connected.png \
			  skins/alteeve/images/network-wired-disconnected.png \
			  skins/alteeve/images/power_icon_original.png \
			  skins/alteeve/images/power_icon.png \
			  skins/alteeve/images/power_icon.xcf \
			  skins/alteeve/images/prep-host_icon.png \
			  skins/alteeve/images/reboot_icon_original.png \
			  skins/alteeve/images/reboot_icon.png \
			  skins/alteeve/images/reboot_icon.xcf \
			  skins/alteeve/images/reboot_needed_icon.png \
			  skins/alteeve/images/refresh_off.png \
			  skins/alteeve/images/refresh_on.png \
			  skins/alteeve/images/refresh_original.png \
			  skins/alteeve/images/refresh.xcf \
			  skins/alteeve/images/run.png \
			  skins/alteeve/images/sources.txt \
			  skins/alteeve/images/striker_configure_original.png \
			  skins/alteeve/images/striker_configure.png \
			  skins/alteeve/images/striker_configure.xcf \
			  skins/alteeve/images/striker_icon_off.png \
			  skins/alteeve/images/striker_icon_off.xcf \
			  skins/alteeve/images/striker_icon_on.png \
			  skins/alteeve/images/striker_icon_original.png \
			  skins/alteeve/images/striker_icon.png \
			  skins/alteeve/images/striker_icon.xcf \
			  skins/alteeve/images/sync_original.png \
			  skins/alteeve/images/sync.png \
			  skins/alteeve/images/sync.xcf \
			  skins/alteeve/images/tasks_jobs-active_icon.png \
			  skins/alteeve/images/tasks_no-jobs_icon.png \
			  skins/alteeve/images/Texture.jpg \
			  skins/alteeve/images/update_original.png \
			  skins/alteeve/images/update_original.xcf \
			  skins/alteeve/images/update.png \
			  skins/alteeve/images/update.xcf \
			  skins/alteeve/images/ups.png \
			  skins/alteeve/images/users_icon_2.png \
			  skins/alteeve/images/users_icon_off.png \
			  skins/alteeve/images/users_icon_on.png \
			  skins/alteeve/images/users_icon_original.png \
			  skins/alteeve/images/users_icon.png \
			  skins/alteeve/images/users_icon.xcf

jqueryuidir		= $(htmldir)/jquery-ui-$(jqueryuiver)

dist_jqueryui_DATA	= \
			 jquery-ui-$(jqueryuiver)/AUTHORS.txt \
			 jquery-ui-$(jqueryuiver)/index.html \
			 jquery-ui-$(jqueryuiver)/jquery-ui.css \
			 jquery-ui-$(jqueryuiver)/jquery-ui.js \
			 jquery-ui-$(jqueryuiver)/jquery-ui.min.css \
			 jquery-ui-$(jqueryuiver)/jquery-ui.min.js \
			 jquery-ui-$(jqueryuiver)/jquery-ui.structure.css \
			 jquery-ui-$(jqueryuiver)/jquery-ui.structure.min.css \
			 jquery-ui-$(jqueryuiver)/jquery-ui.theme.css \
			 jquery-ui-$(jqueryuiver)/jquery-ui.theme.min.css \
			 jquery-ui-$(jqueryuiver)/LICENSE.txt \
			 jquery-ui-$(jqueryuiver)/package.json

# empty dir
jqueryuiexternaldir	= $(jqueryuidir)/external

jqueryuiexternaljquerydir= $(jqueryuiexternaldir)/jquery

dist_jqueryuiexternaljquery_DATA = \
			 jquery-ui-$(jqueryuiver)/external/jquery/jquery.js

jqueryuiimagesdir	= $(jqueryuidir)/images

dist_jqueryuiimages_DATA= \
			 jquery-ui-$(jqueryuiver)/images/ui-bg_glass_55_fbf9ee_1x400.png \
			 jquery-ui-$(jqueryuiver)/images/ui-bg_glass_65_ffffff_1x400.png \
			 jquery-ui-$(jqueryuiver)/images/ui-bg_glass_75_dadada_1x400.png \
			 jquery-ui-$(jqueryuiver)/images/ui-bg_glass_75_e6e6e6_1x400.png \
			 jquery-ui-$(jqueryuiver)/images/ui-bg_glass_95_fef1ec_1x400.png \
			 jquery-ui-$(jqueryuiver)/images/ui-bg_highlight-soft_75_cccccc_1x100.png \
			 jquery-ui-$(jqueryuiver)/images/ui-icons_222222_256x240.png \
			 jquery-ui-$(jqueryuiver)/images/ui-icons_2e83ff_256x240.png \
			 jquery-ui-$(jqueryuiver)/images/ui-icons_454545_256x240.png \
			 jquery-ui-$(jqueryuiver)/images/ui-icons_888888_256x240.png \
			 jquery-ui-$(jqueryuiver)/images/ui-icons_cd0a0a_256x240.png

install-data-hook:
	(cd $(DESTDIR)/${htmldir}; $(LN_S) jquery-$(jqueryver).js jquery-latest.js; $(LN_S) jquery-ui-$(jqueryuiver) jquery-ui-latest)

uninstall-hook:
	(cd $(DESTDIR)/${htmldir}; rm -f jquery-latest.js jquery-ui-latest)
