MAINTAINERCLEANFILES	= Makefile.in

# empty dir for now
htmldir			= ${localstatedir}/www/html

# empty dir for now
skinsdir		= $(htmldir)/skins

# empty dir for now
skinsalteevedir		= $(skinsdir)/alteeve

skinsalteeveimagesdir	= $(skinsalteevedir)/images

dist_skinsalteeveimages_DATA= \
			  skins/alteeve/images/anvil_icon_off.png \
			  skins/alteeve/images/anvil_icon_on.png \
			  skins/alteeve/images/anvil_icon_original.png \
			  skins/alteeve/images/anvil_icon.png \
			  skins/alteeve/images/anvil_icon.xcf \
			  skins/alteeve/images/back_off.png \
			  skins/alteeve/images/back_on.png \
			  skins/alteeve/images/back_original.png \
			  skins/alteeve/images/back.png \
			  skins/alteeve/images/back.xcf \
			  skins/alteeve/images/bios-splash.jpg \
			  skins/alteeve/images/broken_key_icon_off.png \
			  skins/alteeve/images/broken_key_icon_on.png \
			  skins/alteeve/images/build-anvil_icon.png \
			  skins/alteeve/images/configure_icon_off.png \
			  skins/alteeve/images/configure_icon_on.png \
			  skins/alteeve/images/configure_icon_original.png \
			  skins/alteeve/images/configure_icon.xcf \
			  skins/alteeve/images/configure-network.png \
			  skins/alteeve/images/delete.png \
			  skins/alteeve/images/email_off.png \
			  skins/alteeve/images/email_on.png \
			  skins/alteeve/images/email_recipient.png \
			  skins/alteeve/images/email_server.png \
			  skins/alteeve/images/fence.png \
			  skins/alteeve/images/files_off.png \
			  skins/alteeve/images/files_on.png \
			  skins/alteeve/images/help_icon_off.png \
			  skins/alteeve/images/help_icon_on.png \
			  skins/alteeve/images/help_icon_original.png \
			  skins/alteeve/images/help_icon.png \
			  skins/alteeve/images/help_icon.xcf \
			  skins/alteeve/images/install_target_disabled.png \
			  skins/alteeve/images/install_target_enabled.png \
			  skins/alteeve/images/install_target_original.png \
			  skins/alteeve/images/install_target_original.xcf \
			  skins/alteeve/images/logo.png \
			  skins/alteeve/images/logo.xcf \
			  skins/alteeve/images/manage_file_32.png \
			  skins/alteeve/images/manage_file.png \
			  skins/alteeve/images/manifest.png \
			  skins/alteeve/images/network-wired-connected.png \
			  skins/alteeve/images/network-wired-disconnected.png \
			  skins/alteeve/images/power_icon_original.png \
			  skins/alteeve/images/power_icon.png \
			  skins/alteeve/images/power_icon.xcf \
			  skins/alteeve/images/prep-host_icon.png \
			  skins/alteeve/images/reboot_icon_original.png \
			  skins/alteeve/images/reboot_icon.png \
			  skins/alteeve/images/reboot_icon.xcf \
			  skins/alteeve/images/reboot_needed_icon.png \
			  skins/alteeve/images/refresh_off.png \
			  skins/alteeve/images/refresh_on.png \
			  skins/alteeve/images/refresh_original.png \
			  skins/alteeve/images/refresh.xcf \
			  skins/alteeve/images/run.png \
			  skins/alteeve/images/sources.txt \
			  skins/alteeve/images/striker_configure_original.png \
			  skins/alteeve/images/striker_configure.png \
			  skins/alteeve/images/striker_configure.xcf \
			  skins/alteeve/images/striker_icon_off.png \
			  skins/alteeve/images/striker_icon_off.xcf \
			  skins/alteeve/images/striker_icon_on.png \
			  skins/alteeve/images/striker_icon_original.png \
			  skins/alteeve/images/striker_icon.png \
			  skins/alteeve/images/striker_icon.xcf \
			  skins/alteeve/images/sync_original.png \
			  skins/alteeve/images/sync.png \
			  skins/alteeve/images/sync.xcf \
			  skins/alteeve/images/tasks_jobs-active_icon.png \
			  skins/alteeve/images/tasks_no-jobs_icon.png \
			  skins/alteeve/images/Texture.jpg \
			  skins/alteeve/images/update_original.png \
			  skins/alteeve/images/update_original.xcf \
			  skins/alteeve/images/update.png \
			  skins/alteeve/images/update.xcf \
			  skins/alteeve/images/ups.png \
			  skins/alteeve/images/users_icon_2.png \
			  skins/alteeve/images/users_icon_off.png \
			  skins/alteeve/images/users_icon_on.png \
			  skins/alteeve/images/users_icon_original.png \
			  skins/alteeve/images/users_icon.png \
			  skins/alteeve/images/users_icon.xcf

