MAINTAINERCLEANFILES	= Makefile.in

dist_man1_MANS		= \
			  anvil-manage-keys.1

dist_man5_MANS		= \
			  anvil.conf.5

dist_man8_MANS		= \
			  alteeve-repo-setup.8 \
			  anvil-boot-server.8 \
			  anvil-change-password.8 \
			  anvil-check-memory.8 \
			  anvil-configure-host.8 \
			  anvil-daemon.8 \
			  anvil-delete-server.8 \
			  anvil-manage-alerts.8 \
			  anvil-manage-dr.8 \
			  anvil-manage-files.8 \
			  anvil-manage-keys.1 \
			  anvil-manage-server.8 \
			  anvil-manage-server-storage.8 \
			  anvil-manage-storage-groups.8 \
			  scancore.8 \
			  striker-initialize-host.8
