MAINTAINERCLEANFILES	= Makefile.in

dist_man1_MANS		= \
			  anvil-manage-keys.1

dist_man5_MANS		= \
			  anvil.conf.5

dist_man8_MANS		= \
			  alteeve-repo-setup.8 \
			  anvil-boot-server.8 \
			  anvil-change-password.8 \
			  anvil-check-memory.8 \
			  anvil-configure-host.8 \
			  anvil-cycle-vm-nics.8 \
			  anvil-daemon.8 \
			  anvil-delete-server.8 \
			  anvil-download-file.8 \
			  anvil-file-details.8 \
			  anvil-join-anvil.8 \
			  anvil-maintenance-mode.8 \
			  anvil-manage-alerts.8 \
			  anvil-manage-dr.8 \
			  anvil-manage-files.8 \
			  anvil-manage-firewall.8 \
			  anvil-manage-host.8 \
			  anvil-manage-power.8 \
			  anvil-manage-server.8 \
			  anvil-manage-server-storage.8 \
			  anvil-manage-storage-groups.8 \
			  anvil-migrate-server.8 \
			  anvil-report-usage.8 \
			  anvil-safe-start.8 \
			  anvil-safe-stop.8 \
			  anvil-shutdown-server.8 \
			  anvil-special-operations.8 \
			  anvil-update-system.8 \
			  anvil-watch-drbd.8 \
			  scancore.8 \
			  striker-check-machines.8 \
			  striker-collect-debug.8 \
			  striker-initialize-host.8 \
			  striker-update-cluster.8 




