MAINTAINERCLEANFILES	= Makefile.in

dist_man1_MANS		= \
			  anvil-manage-keys.1

dist_man5_MANS		= \
			  anvil.conf.5

dist_man8_MANS		= \
			  anvil-boot-server.8 \
			  anvil-change-password.8 \
			  anvil-check-memory.8 \
			  anvil-configure-host.8 \
			  anvil-cycle-vm-nics.8 \
			  anvil-daemon.8 \
			  anvil-delete-server.8 \
			  anvil-download-file.8 \
			  anvil-file-details.8 \
			  anvil-join-anvil.8 \
			  anvil-maintenance-mode.8 \
			  anvil-manage-alerts.8 \
			  anvil-manage-daemons.8 \
			  anvil-manage-dr.8 \
			  anvil-manage-files.8 \
			  anvil-manage-firewall.8 \
			  anvil-manage-host.8 \
			  anvil-manage-power.8 \
			  anvil-manage-server.8 \
			  anvil-manage-server-storage.8 \
			  anvil-manage-storage-groups.8 \
			  anvil-monitor-network.8 \
			  anvil-monitor-performance.8 \
			  anvil-migrate-server.8 \
			  anvil-network-profiler.8 \
			  anvil-parse-fence-agents.8 \
			  anvil-pcs-wrapper.8 \
			  anvil-provision-server.8 \
			  anvil-rename-server.8 \
			  anvil-report-usage.8 \
			  anvil-safe-start.8 \
			  anvil-safe-stop.8 \
			  anvil-show-local-ips.8 \
			  anvil-shutdown-server.8 \
			  anvil-special-operations.8 \
			  anvil-sync-shared.8 \
			  anvil-update-issue.8 \
			  anvil-update-system.8 \
			  anvil-version-changes.8 \
			  anvil-virsh-wrapper.8 \
			  anvil-watch-bonds.8 \
			  anvil-watch-drbd.8 \
			  anvil-watch-power.8 \
			  anvil-watch-servers.8 \
			  fence_delay.8 \
			  fence_pacemaker.8 \
			  scancore.8 \
			  scan-apc-pdu.8 \
			  scan-apc-ups.8 \
			  scan-cluster.8 \
			  scan-drbd.8 \
			  scan-filesystems.8 \
			  scan-hardware.8 \
			  scan-hpacucli.8 \
			  scan-ipmitool.8 \
			  scan-lvm.8 \
			  scan-network.8 \
			  scan-server.8 \
			  scan-storcli.8 \
			  striker-auto-initialize-all.8 \
			  striker-boot-machine.8 \
			  striker-check-machines.8 \
			  striker-collect-debug.8 \
			  striker-db-status.8 \
			  striker-file-manager.8 \
			  striker-get-peer-data.8 \
			  striker-initialize-host.8 \
			  striker-manage-install-target.8 \
			  striker-manage-peers.8 \
			  striker-parse-oui.8 \
			  striker-purge-target.8 \
			  striker-scan-network.8 \
			  striker-show-db-counts.8 \
			  striker-show-jobs.8 \
			  striker-update-cluster.8 \
			  unfence_pacemaker.8




