MAINTAINERCLEANFILES	= Makefile.in

EXTRA_DIST		= \
			  tftpboot/bios/ldlinux.c32 \
			  tftpboot/bios/libcom32.c32 \
			  tftpboot/bios/libutil.c32 \
			  tftpboot/bios/vesamenu.c32 \
			  tftpboot/pxelinux/uefi \
			  tftpboot/splash.jpg \
			  tftpboot/uefi/grubx64.efi \
			  tftpboot/uefi/shim.efi
