MAINTAINERCLEANFILES		= Makefile.in

targetdir			= ${sbindir}/scancore-agents

apcpdudir			= ${targetdir}/scan-apc-pdu
dist_apcpdu_DATA		= \
				  scan-apc-pdu/scan-apc-pdu.xml \
				  scan-apc-pdu/Striker-MIB.txt \
				  scan-apc-pdu/scan-apc-pdu.sql
dist_apcpdu_SCRIPTS		= \
				  scan-apc-pdu/scan-apc-pdu

apcupsdir			= ${targetdir}/scan-apc-ups
dist_apcups_DATA		= \
				  scan-apc-ups/scan-apc-ups.xml \
				  scan-apc-ups/scan-apc-ups.sql
dist_apcups_SCRIPTS		= \
				  scan-apc-ups/scan-apc-ups

clusterdir			= ${targetdir}/scan-cluster
dist_cluster_DATA		= \
				  scan-cluster/scan-cluster.sql \
				  scan-cluster/scan-cluster.xml
dist_cluster_SCRIPTS		= \
				  scan-cluster/scan-cluster

drbddir				= ${targetdir}/scan-drbd
dist_drbd_DATA			= \
				  scan-drbd/scan-drbd.xml \
				  scan-drbd/scan-drbd.sql
dist_drbd_SCRIPTS		= \
				  scan-drbd/scan-drbd

filesystemsdir                  = ${targetdir}/scan-filesystems
dist_filesystems_DATA           = \
                                  scan-filesystems.xml \
                                  scan-filesystems.sql

dist_filesystems_SCRIPTS        = \
                                  scan-filesystems

hardwaredir			= ${targetdir}/scan-hardware
dist_hardware_DATA		= \
				  scan-hardware/scan-hardware.xml \
				  scan-hardware/scan-hardware.sql
dist_hardware_SCRIPTS		= \
				  scan-hardware/scan-hardware

ipmitooldir			= ${targetdir}/scan-ipmitool
dist_ipmitool_DATA		= \
				  scan-ipmitool/scan-ipmitool.sql \
				  scan-ipmitool/scan-ipmitool.xml
dist_ipmitool_SCRIPTS		= \
				  scan-ipmitool/scan-ipmitool

lvmdir				= ${targetdir}/scan-lvm
dist_lvm_DATA			= \
				  scan-lvm/scan-lvm.sql \
				  scan-lvm/scan-lvm.xml
dist_lvm_SCRIPTS		= \
				  scan-lvm/scan-lvm

serverdir			= ${targetdir}/scan-server
dist_server_DATA		= \
				  scan-server/scan-server.sql \
				  scan-server/scan-server.xml
dist_server_SCRIPTS		= \
				  scan-server/scan-server

storclidir			= ${targetdir}/scan-storcli
dist_storcli_DATA		= \
				  scan-storcli/scan-storcli.sql \
				  scan-storcli/scan-storcli.xml
dist_storcli_SCRIPTS		= \
				  scan-storcli/scan-storcli
